--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.18"
-    
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -30,5 +30,4 @@
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
   }
-  
 }
